Apply tailwindcss style

--- a/BlazorTailwind/Client/Pages/Counter.razor
+++ b/BlazorTailwind/Client/Pages/Counter.razor
@@ -4,7 +4,7 @@
 
 <p>Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<button class="px-4 py-2 bg-blue-500 rounded text-white hover:bg-blue-300" @onclick="IncrementCount">Click me</button>
 
 @code {
     private int currentCount = 0;
