--- a/BlazorTailwind/Client/Shared/NavMenu.razor
+++ b/BlazorTailwind/Client/Shared/NavMenu.razor
@@ -1,34 +1,49 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">BlazorTailwind</a>
-    <button class="navbar-toggler" @onclick="ToggleNavMenu">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-</div>
+﻿
+<div class="lg:w-64 bg-gradient-to-b from-blue-800 to-blue-700 lg:block w-full">
+    <div class="bg-blue-900 py-4 px-4 font-bold text-white flex justify-between">
+        <a href="#">BlazorTailwind</a>
+        <svg id="hambergerMenu" @onclick="ToggleNavMenu" class="w-7 lg:hidden cursor-pointer" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+    </div>
+    <ul id="menuList" class="@NavMenuCssClass lg:block transition duration-500 ease-in-out ">
+        <li class="text-white px-3 py-2 ">
+            <NavLink class="flex px-4 py-2 hover:bg-gray-700 rounded " href="" Match="NavLinkMatch.All" ActiveClass="bg-gray-500" @onclick="ToggleNavMenu">
+                <svg class="w-6 mr-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                    <path d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z" />
+                </svg>
 
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <ul class="nav flex-column">
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                Home
             </NavLink>
         </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter" ActiveClass="test">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+        <li class="text-white px-3 py-2 ">
+            <NavLink class="flex px-4 py-2 hover:bg-gray-700 rounded" href="counter" ActiveClass="bg-gray-500" @onclick="ToggleNavMenu">
+                <svg class="w-6 mr-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                     stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="5" d="M12 6v6m0 0v6m0-6h6m-6 0H6" />
+                </svg>
+
+                Counter
             </NavLink>
         </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+        <li class="text-white px-3 py-2 ">
+            <NavLink class="flex px-4 py-2 hover:bg-gray-700 rounded" href="fetchdata" ActiveClass="bg-gray-500" @onclick="ToggleNavMenu">
+                <svg class="w-6 mr-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                     stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                          d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01" />
+                </svg>
+
+                Fetch data
             </NavLink>
         </li>
     </ul>
-</div>
 
+</div>
 @code {
     private bool collapseNavMenu = true;
 
-    private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+    private string NavMenuCssClass => collapseNavMenu ? "hidden" : null;
 
     private void ToggleNavMenu()
     {
