--- a/BlazorTailwind/Client/Pages/Index.razor
+++ b/BlazorTailwind/Client/Pages/Index.razor
@@ -1,7 +1,10 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1 class="text-4xl ">Hello, world!</h1>
+<p>
+    Welcome to your new app.
+</p>
 
-Welcome to your new app.
+
 
 <SurveyPrompt Title="How is Blazor working for you?" />
