--- a/BlazorTailwind/Client/Shared/SurveyPrompt.razor
+++ b/BlazorTailwind/Client/Shared/SurveyPrompt.razor
@@ -1,12 +1,11 @@
-﻿<div class="alert alert-secondary mt-4" role="alert">
-    <span class="oi oi-pencil mr-2" aria-hidden="true"></span>
-    <strong>@Title</strong>
-
-    <span class="text-nowrap">
-        Please take our
-        <a target="_blank" class="font-weight-bold" href="https://go.microsoft.com/fwlink/?linkid=2148851">brief survey</a>
-    </span>
-    and tell us what you think.
+﻿
+<div class="bg-gray-300 p-3 mt-4 rounded flex align-middle border ">
+    <svg class="w-4 mr-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+         stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
+    </svg>
+    <strong>@Title</strong> Please take our <a target="_blank" class="font-weight-bold" href="https://go.microsoft.com/fwlink/?linkid=2148851">brief survey</a> and tell us what you think.
 </div>
 
 @code {
