dev 2 squach  dev 1

--- a/BlazorTailwind/Client/Shared/MainLayout.razor
+++ b/BlazorTailwind/Client/Shared/MainLayout.razor
@@ -8,6 +8,8 @@
     <div class="flex-1 ">
               <div class="py-4 bg-gray-200 text-right">
         <a class="mr-6" href="#">About</a>
+        @* dev 1 *@
+        @* dev 2 *@
       </div>
       <div class="py-4 px-4">
           @Body
